<resources>
    <string name="app_name">FeedbackTree</string>
    <string name="fingerprint_for">Fingerprint for</string>
    <string name="sign_in_using_your_fingerprint">Sign in using your fingerprint</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="sign_in">Sign In</string>
    <string name="alert_modal_with_view">Alert Modal With View</string>
    <string name="alert_modal">Alert Modal</string>
    <string name="full_screen_modal">Full Screen Modal</string>
    <string name="test_if_keyboard_pushes_view">Test if keyboard pushes view</string>
    <string name="custom_size_modal">Custom Size Modal</string>
</resources>
