<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/ft_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="30dp"
            android:paddingRight="24dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alert_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:enabled="true"
                android:padding="12dp"
                android:text="@string/alert_modal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alertModalWithViewButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_background"
                android:enabled="true"
                android:padding="12dp"
                android:text="@string/alert_modal_with_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/full_screen_modal_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:enabled="true"
                android:padding="12dp"
                android:text="@string/full_screen_modal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/custom_size_modal_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:enabled="true"
                android:padding="12dp"
                android:text="@string/custom_size_modal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>