<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="100dp"
        android:paddingRight="24dp">

        <com.feedbacktree.utils.FTEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/textColorPrimary"
            android:background="@drawable/border_primary"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />


        <com.feedbacktree.utils.FTEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/textColorPrimary"
            android:background="@drawable/border_primary"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_background"
            android:enabled="true"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>